CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
#PROJECT()
#ADD_SUBDIRECTORY(src)
FIND_PACKAGE(rosbag REQUIRED)
FIND_PACKAGE( OpenCV REQUIRED  )
FIND_PACKAGE( cv_bridge REQUIRED  )
INCLUDE_DIRECTORIES(${ROSBAG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${cv_bridge_INCLUDE_DIRS})

#LINK_DIRECTORIES()
ADD_EXECUTABLE(extract_file extract_file.cpp)
TARGET_LINK_LIBRARIES(extract_file ${rosbag_LIBRARIES} ${cv_bridge_LIBRARIES} ${OpenCV_LIBS})
